# src/api/model/index.ts
@@ -13,6 +13,7 @@ export * from './eventPlayer';
 export * from './eventTeam';
 export * from './eventType';
 export * from './getEventById200';
+export * from './getEventsParams';
 export * from './location';
 export * from './loginWithGoogleBody';
 export * from './player';
@@ -20,8 +21,13 @@ export * from './postApiAuthLoginGoogleNativeBody';
 export * from './postLoginGoogleNative200';
 export * from './postLoginGoogleNativeBody';
 export * from './refreshTokenBody';
+export * from './searchEvent';
+export * from './searchEventsParams';
+export * from './searchTeam';
+export * from './searchTeamsParams';
 export * from './sport';
 export * from './team';
+export * from './teamDetail';
 export * from './ticket';
 export * from './ticketing';
 export * from './tokenResponse';
